--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,18 +16,21 @@ dependencies:
 
   cupertino_icons: ^1.0.8
   google_fonts: ^6.2.1
+  hive: ^2.2.3
+  
+  flutter_svg: ^2.0.16
+  path_provider: ^2.1.5
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
 
-  flutter_lints: ^4.0.0
+  flutter_lints: ^5.0.0
 
 flutter:
   uses-material-design: true
 
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
-
+  
+  assets:
+   - assets/
 
