--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,24 @@ dependencies:
   flutter_svg: ^2.0.16
   path_provider: ^2.1.5
   provider: ^6.1.2
+  flutter_native_splash: ^2.4.4
+  flutter_launcher_icons: ^0.14.2
+
+
+flutter_native_splash:
+  color: "#007FFF"
+  image: "assets/app/splash.png"
+  android: true
+  ios: true
+
+flutter_icons:
+  image_path: "assets/app/icon.png"
+  ios: true
+  remove_alpha_ios: true
+  android: "launcher_icon"
+  adaptive_icon_background: "#FFFFFF"
+  adaptive_icon_foreground: "assets/app/icon-android.png"
+
 
 dev_dependencies:
   flutter_test:
